Set project and project images queries

--- a/projects/caikei/index.mdx
+++ b/projects/caikei/index.mdx
@@ -1,13 +1,12 @@
 ---
-title: "My First Post"
-date: "2021-07-23"
-slug: "my-first-post"
-hero_image_alt: "Kyoto, Japan"
-hero_image_credit_text: "Jase Bloor"
-hero_image_credit_link: "https://unsplash.com/es/fotos/oCZHIa1D4EU"
+title: "Caikei"
+date: "2023-04-23"
+slug: "caikei"
+link: "https://caikei.vercel.app/"
+main_image: "./Caikei.png"
 ---
 
-This is my first blog post! Isn't it *great*?
+This is my first project!
 
 Some of my **favorite** things are:
 
