Set more data for each project

--- a/projects/hotelBooking/index.mdx
+++ b/projects/hotelBooking/index.mdx
@@ -3,6 +3,7 @@ title: "Hotel Booking"
 date: "2023-01-23"
 slug: "hotel-booking"
 link: "https://frontend-hotel-booking-ashy.vercel.app"
+github_link: "https://github.com/juanor9/frontend-hotel-booking"
 main_image: "./hotel-booking.jpg"
 ---
 
