Tune projects styling for home page

--- a/projects/hotelBooking/index.mdx
+++ b/projects/hotelBooking/index.mdx
@@ -5,6 +5,7 @@ slug: "hotel-booking"
 link: "https://frontend-hotel-booking-ashy.vercel.app"
 github_link: "https://github.com/juanor9/frontend-hotel-booking"
 main_image: "./hotel-booking.jpg"
+skills: [Javascript, TypeScript, Node.js, CSS, MongoDB, Mongoose, Express.js, Bcrypt, JSON Web Token, React.js, Redux Toolkit, Cloudinary React, React, GitHub]
 ---
 
 This is my first project!
