--- a/projects/portfolio/index.mdx
+++ b/projects/portfolio/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Caikei"
-date: "2023-04-23"
-slug: "caikei"
-link: "https://caikei.vercel.app/"
-github_link: "https://github.com/juanor9/caikei-frontend"
-main_image: "./Caikei.png"
-skills: [Javascript, TypeScript, Node.js, SASS, MongoDB, Mongoose, Express.js, Bcrypt, JSON Web Token, Nodemailer, SheetJS, React.js, Redux Toolkit, React PDF, Cloudinary React, React Hot Toast, GitHub]
+title: "Web Developer Portfolio"
+date: "2023-05-18"
+slug: "portfolio"
+link: "#"
+github_link: "https://github.com/juanor9/portfolio"
+main_image: "./portfolio.png"
+skills: [JavaScript, Gatsby, SASS, React.js, GraphQL]
 short_intro: "Effortlessly track inventory and generate documents for publishers. User-friendly interface, secure backend. Simplify operations for small-medium publishers. Reliable and visually appealing solution."
 ---
 Caikei is a web development project designed to assist independent publishers in comfortably and effectively keeping track of their inventory, while generating the necessary supporting documents for merchandise movements. With a user-friendly and visually pleasing interface, Caikei streamlines the process of monitoring and managing books effortlessly.
