Include info for projects

--- a/projects/hotelBooking/index.mdx
+++ b/projects/hotelBooking/index.mdx
@@ -6,6 +6,7 @@ link: "https://frontend-hotel-booking-ashy.vercel.app"
 github_link: "https://github.com/juanor9/frontend-hotel-booking"
 main_image: "./hotel-booking.jpg"
 skills: [Javascript, TypeScript, Node.js, CSS, MongoDB, Mongoose, Express.js, Bcrypt, JSON Web Token, React.js, Redux Toolkit, Cloudinary React, React, GitHub]
+short_intro: "Discover the best hotel deals based on your desired city and travel dates. Explore detailed hotel profiles, photo galleries, room types, and enjoy secure payment processing. Developed in 9 weeks by a team of 3 developers using Scrum methodology."
 ---
 
 This is my first project!
