--- a/projects/portfolio/index.mdx
+++ b/projects/portfolio/index.mdx
@@ -6,14 +6,5 @@ link: "#"
 github_link: "https://github.com/juanor9/portfolio"
 main_image: "./portfolio.png"
 skills: [JavaScript, Gatsby, SASS, React.js, GraphQL]
-short_intro: "Effortlessly track inventory and generate documents for publishers. User-friendly interface, secure backend. Simplify operations for small-medium publishers. Reliable and visually appealing solution."
+short_intro: "Unleashing the power of Gatsby and my expertise in Javascript, Gatsby, SASS, and responsive web design. Step into a visually captivating world where innovation meets stunning aesthetics, showcasing my skills as a frontend developer."
 ---
-Caikei is a web development project designed to assist independent publishers in comfortably and effectively keeping track of their inventory, while generating the necessary supporting documents for merchandise movements. With a user-friendly and visually pleasing interface, Caikei streamlines the process of monitoring and managing books effortlessly.
-
-Publishers can take advantage of Caikei's key features, which include registering their publishing house, cataloging books, tracking sales outlets, and generating merchandise movements such as incoming, dispatch, returns, and liquidations. Furthermore, users benefit from instantly downloading the required merchandise movement supports in PDF format. To expedite the initial inventory loading, Caikei enables data import from Excel spreadsheets.
-
-One of Caikei's standout qualities is its focus on user-friendliness and aesthetics. With an intuitive and visually appealing interface, even non-technical users can navigate and utilize the system seamlessly. This project has been developed using cutting-edge technologies and frameworks, such as JavaScript, TypeScript, Node.js, MongoDB, Mongoose, and Express.js, to ensure reliable performance and a smooth user experience.
-
-Regarding security, Caikei has implemented protective measures like Bcrypt and JSON Web Token to safeguard publishers' data and inventory at all times. Additionally, the Nodemailer module facilitates communication with sales outlets, while SheetJS simplifies data import from Excel.
-
-Caikei is the perfect ally for independent small and medium-sized publishers in Colombia. It simplifies publishing management and provides instant access to all the necessary supporting documents, allowing publishers to focus on what matters most: creating and disseminating quality content. Developed by a dedicated team, this project is the result of comprehensive efforts in both frontend and backend development, delivering a reliable and appealing solution.
