--- a/projects/portfolio/index.mdx
+++ b/projects/portfolio/index.mdx
@@ -5,6 +5,6 @@ slug: "portfolio"
 link: "#"
 github_link: "https://github.com/juanor9/portfolio"
 main_image: "./portfolio.png"
-skills: [JavaScript, Gatsby, SASS, React.js, GraphQL]
+skills: [JavaScript, Gatsby, SASS, React.js, GraphQL, Kwes Forms]
 short_intro: "Unleashing the power of Gatsby and my expertise in Javascript, Gatsby, SASS, and responsive web design. Step into a visually captivating world where innovation meets stunning aesthetics, showcasing my skills as a frontend developer."
 ---
