fix minor styling issues

--- a/projects/caikei/index.mdx
+++ b/projects/caikei/index.mdx
@@ -5,10 +5,32 @@ slug: "caikei"
 link: "https://caikei.vercel.app/"
 github_link: "https://github.com/juanor9/caikei-frontend"
 main_image: "./Caikei.png"
-skills: [Javascript, TypeScript, Node.js, SASS, MongoDB, Mongoose, Express.js, Bcrypt, JSON Web Token, Nodemailer, SheetJS, React.js, Redux Toolkit, React PDF, Cloudinary React, React Hot Toast, GitHub]
+skills:
+  [
+    Javascript,
+    TypeScript,
+    Node.js,
+    SASS,
+    MongoDB,
+    Mongoose,
+    Express.js,
+    Bcrypt,
+    JSON Web Token,
+    Nodemailer,
+    SheetJS,
+    React.js,
+    Redux Toolkit,
+    React PDF,
+    Cloudinary React,
+    React Hot Toast,
+    GitHub,
+  ]
 short_intro: "Effortlessly track inventory and generate documents for publishers. User-friendly interface, secure backend. Simplify operations for small-medium publishers. Reliable and visually appealing solution."
 ---
+
 Caikei is a web development project designed to assist independent publishers in comfortably and effectively keeping track of their inventory, while generating the necessary supporting documents for merchandise movements. With a user-friendly and visually pleasing interface, Caikei streamlines the process of monitoring and managing books effortlessly.
+
+### Trying Title
 
 Publishers can take advantage of Caikei's key features, which include registering their publishing house, cataloging books, tracking sales outlets, and generating merchandise movements such as incoming, dispatch, returns, and liquidations. Furthermore, users benefit from instantly downloading the required merchandise movement supports in PDF format. To expedite the initial inventory loading, Caikei enables data import from Excel spreadsheets.
 
