Set styles for individual project pages and set info for first project

--- a/projects/hotelBooking/index.mdx
+++ b/projects/hotelBooking/index.mdx
@@ -9,10 +9,34 @@ skills: [Javascript, TypeScript, Node.js, CSS, MongoDB, Mongoose, Express.js, Bc
 short_intro: "Discover the best hotel deals based on your desired city and travel dates. Explore detailed hotel profiles, photo galleries, room types, and enjoy secure payment processing. Developed in 9 weeks by a team of 3 developers using Scrum methodology."
 ---
 
-This is my first project!
+Welcome to the hotel booking website. This project, powered by cutting-edge MERN (MongoDB, Express.js, React.js, Node.js) technologies, provides a seamless and secure user experience. Explore the purpose, challenges faced, and valuable lessons learned throughout the development process.
 
-Some of my **favorite** things are:
+### Project Purpose and Goal
 
-* Petting dogs
-* Singing
-* Eating potato-based foods
+The primary objective of the hotel booking website was to create a user-friendly and safe platform for individuals seeking an exceptional vacation experience. Our goal was to replicate the designer's vision and client requirements, ensuring that users could easily browse and book hotels based on stunning design images.
+
+### Web Stack and Explanation
+
+The hotel booking website leveraged various technologies, each serving a specific purpose in the development process:
+
+- **JavaScript and TypeScript:** These programming languages enabled the creation of dynamic and interactive web components.
+- **Node.js:** As a server-side JavaScript runtime, Node.js facilitated the handling of server logic and data processing.
+- **CSS:** Cascading Style Sheets were utilized to design and style the website, ensuring an aesthetically pleasing user interface.
+- **MongoDB and Mongoose:** MongoDB served as the NoSQL database, while Mongoose acted as the Object Data Modeling (ODM) library, simplifying database operations and ensuring seamless data integration.
+- **Express.js:** This web application framework enabled the creation of robust server-side APIs, routing, and middleware implementation.
+- **Bcrypt and JSON Web Token:** These technologies were employed for secure user authentication and authorization.
+- **React.js and Redux Toolkit:** React.js facilitated the creation of dynamic and reusable components, while Redux Toolkit handled state management efficiently.
+- **Cloudinary React:** This technology allowed for seamless integration of image uploading and hosting.
+- **GitHub:** GitHub served as the version control system, enabling efficient collaboration and code management.
+
+### Problems and Thought Process
+
+Throughout the development process, we encountered challenges that tested our critical thinking and problem-solving skills. Notably, managing Redux Toolkit states and ensuring their synchronization during user navigation proved to be a significant hurdle. Additionally, understanding and implementing side effects for React presented a learning curve. Thorough documentation review and hands-on experimentation enabled us to overcome these obstacles and achieve the desired results.
+
+### Lessons Learned
+
+The hotel booking website project provided valuable insights and lessons that will guide future endeavors. We learned the importance of planning side effects from the project's inception, as it significantly enhances the development experience. Additionally, deploying thorough testing before moving into the production phase or client demos proved to be invaluable. Moving forward, careful planning of effects and actions on each view will be a priority, ensuring smoother development cycles.
+
+### Possible Improvements
+
+As the hotel booking website stands as a completed project, no further updates are planned. However, in retrospect, we acknowledge potential areas for improvement and optimization. Better planning of the development experience would have allowed for more efficient execution. As an MVP (Minimum Viable Product), we would prioritize requirements more meticulously, ensuring optimal feature implementation. Incorporating a review feature for hotels and the ability to save payment methods would have enhanced the overall user experience, providing additional value and convenience.
