Add information for Caikei project

--- a/projects/caikei/index.mdx
+++ b/projects/caikei/index.mdx
@@ -28,14 +28,57 @@ skills:
 short_intro: "Effortlessly track inventory and generate documents for publishers. User-friendly interface, secure backend. Simplify operations for small-medium publishers. Reliable and visually appealing solution."
 ---
 
-Caikei is a web development project designed to assist independent publishers in comfortably and effectively keeping track of their inventory, while generating the necessary supporting documents for merchandise movements. With a user-friendly and visually pleasing interface, Caikei streamlines the process of monitoring and managing books effortlessly.
 
-### Trying Title
+### Introduction
+Welcome to Caikei, a web development project that I, as a solo developer, have created to assist independent publishers in comfortably and effectively managing their inventory. With its user-friendly and visually pleasing interface, Caikei streamlines the process of monitoring and managing books effortlessly.
 
-Publishers can take advantage of Caikei's key features, which include registering their publishing house, cataloging books, tracking sales outlets, and generating merchandise movements such as incoming, dispatch, returns, and liquidations. Furthermore, users benefit from instantly downloading the required merchandise movement supports in PDF format. To expedite the initial inventory loading, Caikei enables data import from Excel spreadsheets.
+### Project Purpose and Goal
+The primary purpose of Caikei is to provide independent publishers with a reliable tool for keeping track of their inventory and generating necessary supporting documents for merchandise movements. The goal is to simplify publishing management, allowing publishers to focus on what matters most: creating and disseminating quality content.
 
-One of Caikei's standout qualities is its focus on user-friendliness and aesthetics. With an intuitive and visually appealing interface, even non-technical users can navigate and utilize the system seamlessly. This project has been developed using cutting-edge technologies and frameworks, such as JavaScript, TypeScript, Node.js, MongoDB, Mongoose, and Express.js, to ensure reliable performance and a smooth user experience.
+### Web Stack and Explanation
+Caikei leverages a powerful web stack consisting of various technologies and frameworks, each serving a specific purpose to ensure a reliable and smooth user experience. The key technologies used in the project include:
 
-Regarding security, Caikei has implemented protective measures like Bcrypt and JSON Web Token to safeguard publishers' data and inventory at all times. Additionally, the Nodemailer module facilitates communication with sales outlets, while SheetJS simplifies data import from Excel.
+- **JavaScript:** The foundation of Caikei's frontend development, JavaScript enables dynamic and interactive user interfaces, enhancing the overall user experience.
 
-Caikei is the perfect ally for independent small and medium-sized publishers in Colombia. It simplifies publishing management and provides instant access to all the necessary supporting documents, allowing publishers to focus on what matters most: creating and disseminating quality content. Developed by a dedicated team, this project is the result of comprehensive efforts in both frontend and backend development, delivering a reliable and appealing solution.
+- **TypeScript:** TypeScript, a superset of JavaScript, adds static typing and strong typing capabilities to the project, resulting in improved code maintainability and enhanced development efficiency.
+
+- **Node.js:** Node.js serves as the backend runtime environment for Caikei, allowing server-side JavaScript execution and facilitating seamless communication between the frontend and backend components.
+
+- **SASS:** SASS (Syntactically Awesome Style Sheets) is utilized for efficient and modular CSS development, enabling easy styling customization and maintaining consistent design across the application.
+
+- **MongoDB:** As a flexible and scalable NoSQL database, MongoDB is employed to store and manage Caikei's publishing inventory data efficiently.
+
+- **Mongoose:** Mongoose, an object data modeling (ODM) library for MongoDB, simplifies database interactions by providing a straightforward schema-based solution and useful abstractions.
+
+- **Express.js:** Express.js, a minimalist web application framework for Node.js, is employed to build the server-side logic of Caikei, enabling efficient routing and handling of HTTP requests.
+
+- **Bcrypt:** Bcrypt is a powerful encryption library utilized in Caikei to securely store and manage sensitive user data, such as passwords.
+
+- **JSON Web Token (JWT):** JWT is implemented in Caikei for authentication and authorization purposes, ensuring secure access to the system's features and protecting publishers' data.
+
+- **Nodemailer:** Nodemailer facilitates seamless communication with sales outlets, enabling efficient and reliable email notifications and correspondence.
+
+- **SheetJS:** SheetJS simplifies the process of importing data from Excel spreadsheets, allowing publishers to expedite the initial inventory loading into Caikei.
+
+- **React.js:** React.js is a widely adopted JavaScript library for building user interfaces. Caikei utilizes React.js to create reusable UI components and ensure a fast and interactive user experience.
+
+- **Redux Toolkit:** Redux Toolkit provides a comprehensive set of tools and abstractions for managing state in React.js applications. Caikei utilizes Redux Toolkit to efficiently handle complex data flows and ensure consistent application state management.
+
+- **React PDF:** React PDF is a library used in Caikei to generate and download merchandise movement supports in PDF format, providing publishers with easy access to essential documents.
+
+- **Cloudinary React:** Cloudinary React simplifies the integration of Cloudinary, a cloud-based media management platform, allowing efficient handling and storage of images and other media assets in Caikei.
+
+- **React Hot Toast:** React Hot Toast is a notification library utilized in Caikei to display user-friendly and visually appealing notifications, enhancing the overall user experience.
+
+- **GitHub:** GitHub serves as the version control system for Caikei, enabling seamless collaboration among team members and ensuring efficient code management and deployment.
+
+### Problems and Thought Process
+During the development of Caikei, I encountered certain challenges. One notable obstacle was designing and implementing the database model to accurately represent the publishing inventory. I meticulously planned and refined the database structure to ensure seamless integration with other functionalities. Additionally, developing a dynamic form capable of accommodating different types of data for various merchandise movements required a flexible and scalable solution to handle diverse scenarios effectively.
+
+### Lessons Learned
+Working on Caikei provided valuable insights. One significant lesson was the importance of balancing interface design with functional development. While aesthetics are crucial, dedicating too much time solely to design can hinder the progress of essential functionalities. Additionally, I learned the benefits of leveraging pre-existing libraries and frameworks to save time and effort compared to building functionalities from scratch.
+
+### Possible Improvements
+While Caikei already offers a range of features to assist publishers in managing their inventory, there are areas for potential improvement. One enhancement could involve incorporating financial movements into the system, enabling publishers to assess the profitability and financial state of their books. Additionally, integrating analytics to identify the best-selling outlets for each book could provide valuable insights, aiding publishers in decision-making and strategic planning.
+
+In conclusion, Caikei is a web development project created by myself to assist independent publishers in managing their inventory effortlessly. Developed using a robust web stack, Caikei ensures reliable performance and a user-friendly experience. By leveraging its key features and considering future improvements, publishers can streamline their publishing management and focus on creating and sharing quality content.
