test i18n dinamyc pages

--- a/projects/caikei/es/index.mdx
+++ b/projects/caikei/es/index.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Caikei"
-lang: "en"
+lang: "es"
 date: "2023-04-23"
 slug: "caikei"
 link: "https://caikei.vercel.app/"
 github_link: "https://github.com/juanor9/caikei-frontend"
-main_image: "./Caikei.png"
+main_image: "../Caikei.png"
 skills:
   [
     Javascript,
@@ -26,7 +26,7 @@ skills:
     React Hot Toast,
     GitHub,
   ]
-short_intro: "Effortlessly track inventory and generate documents for publishers. User-friendly interface, secure backend. Simplify operations for small-medium publishers. Reliable and visually appealing solution."
+short_intro: "Realiza un seguimiento del inventario sin esfuerzo y genera documentos de sporte para los editores. Cuenta con una interfaz fácil de usar y un backend seguro. Simplifica las operaciones de las pequeñas y medianas editoriales. Una solución fiable y visualmente atractiva."
 ---
 
 
