Set i18n routes and basic files

--- a/projects/caikei/es/index.mdx
+++ b/projects/caikei/es/index.mdx
@@ -2,7 +2,7 @@
 title: "Caikei"
 lang: "es"
 date: "2023-04-23"
-slug: "caikei"
+slug: "caikei-es"
 link: "https://caikei.vercel.app/"
 github_link: "https://github.com/juanor9/caikei-frontend"
 main_image: "../Caikei.png"
@@ -30,56 +30,56 @@ short_intro: "Realiza un seguimiento del inventario sin esfuerzo y genera docume
 ---
 
 
-### Introduction
-Welcome to Caikei, a web development project that I, as a solo developer, have created to assist independent publishers in comfortably and effectively managing their inventory. With its user-friendly and visually pleasing interface, Caikei streamlines the process of monitoring and managing books effortlessly.
+### Presentación 
+Bienvenido a Caikei, un proyecto de desarrollo web que, como desarrollador en solitario, he creado para ayudar a las editoriales independientes a gestionar cómoda y eficazmente su inventario. Con su interfaz fácil de usar y visualmente agradable, Caikei agiliza el proceso de seguimiento y gestión de libros sin esfuerzo.
 
-### Project Purpose and Goal
-The primary purpose of Caikei is to provide independent publishers with a reliable tool for keeping track of their inventory and generating necessary supporting documents for merchandise movements. The goal is to simplify publishing management, allowing publishers to focus on what matters most: creating and disseminating quality content.
+### Finalidad y objetivo del proyecto
+El objetivo principal de Caikei es proporcionar a los editores independientes una herramienta fiable para llevar el control de sus existencias y generar los justificantes necesarios para los movimientos de mercancías. El objetivo es simplificar la gestión editorial, permitiendo a los editores centrarse en lo más importante: crear y difundir contenidos de calidad.
 
-### Web Stack and Explanation
-Caikei leverages a powerful web stack consisting of various technologies and frameworks, each serving a specific purpose to ensure a reliable and smooth user experience. The key technologies used in the project include:
+### Web stack y explicación
+Caikei aprovecha un potente web stack formada por varias tecnologías y frameworks, cada uno de los cuales cumple una función específica para garantizar una experiencia de usuario fiable y fluida. Las tecnologías clave utilizadas en el proyecto son:
 
-- **JavaScript:** The foundation of Caikei's frontend development, JavaScript enables dynamic and interactive user interfaces, enhancing the overall user experience.
+- **JavaScript:** Base del desarrollo frontend de Caikei, JavaScript permite interfaces de usuario dinámicas e interactivas, mejorando la experiencia global del usuario.
 
-- **TypeScript:** TypeScript, a superset of JavaScript, adds static typing and strong typing capabilities to the project, resulting in improved code maintainability and enhanced development efficiency.
+- **TypeScript:** TypeScript, un superconjunto de JavaScript, añade capacidades de tipado estático y tipado fuerte al proyecto, lo que mejora la capacidad de mantenimiento del código y la eficacia del desarrollo.
 
-- **Node.js:** Node.js serves as the backend runtime environment for Caikei, allowing server-side JavaScript execution and facilitating seamless communication between the frontend and backend components.
+- **Node.js:** Node.js sirve como entorno de ejecución backend para Caikei, permitiendo la ejecución de JavaScript del lado del servidor y facilitando una comunicación fluida entre los componentes frontend y backend.
 
-- **SASS:** SASS (Syntactically Awesome Style Sheets) is utilized for efficient and modular CSS development, enabling easy styling customization and maintaining consistent design across the application.
+- **SASS:** SASS (Syntactically Awesome Style Sheets) se utiliza para un desarrollo CSS eficiente y modular, permitiendo una fácil personalización del estilo y manteniendo un diseño consistente en toda la aplicación.
 
-- **MongoDB:** As a flexible and scalable NoSQL database, MongoDB is employed to store and manage Caikei's publishing inventory data efficiently.
+- **MongoDB:** Como base de datos NoSQL flexible y escalable, MongoDB se emplea para almacenar y gestionar eficazmente los datos de inventario de publicación de Caikei.
 
-- **Mongoose:** Mongoose, an object data modeling (ODM) library for MongoDB, simplifies database interactions by providing a straightforward schema-based solution and useful abstractions.
+- **Mongoose:** Mongoose, una librería de modelado de datos de objetos (ODM) para MongoDB, simplifica las interacciones con bases de datos proporcionando una solución basada en esquemas y abstracciones útiles.
 
-- **Express.js:** Express.js, a minimalist web application framework for Node.js, is employed to build the server-side logic of Caikei, enabling efficient routing and handling of HTTP requests.
+- **Express.js:** Express.js, un marco de aplicación web minimalista para Node.js, se emplea para construir la lógica del lado del servidor de Caikei, lo que permite un enrutamiento y una gestión eficaces de las solicitudes HTTP.
 
-- **Bcrypt:** Bcrypt is a powerful encryption library utilized in Caikei to securely store and manage sensitive user data, such as passwords.
+- **Bcrypt:** Bcrypt es una potente biblioteca de cifrado utilizada en Caikei para almacenar y gestionar de forma segura los datos sensibles de los usuarios, como las contraseñas.
 
-- **JSON Web Token (JWT):** JWT is implemented in Caikei for authentication and authorization purposes, ensuring secure access to the system's features and protecting publishers' data.
+- **JSON Web Token (JWT):** JWT está implementado en Caikei con fines de autenticación y autorización, garantizando un acceso seguro a las funcionalidades del sistema y protegiendo los datos de los editores.
 
-- **Nodemailer:** Nodemailer facilitates seamless communication with sales outlets, enabling efficient and reliable email notifications and correspondence.
+- **Nodemailer:** Nodemailer facilita la comunicación fluida con los puntos de venta, permitiendo notificaciones y correspondencia por correo electrónico eficaces y fiables.
 
-- **SheetJS:** SheetJS simplifies the process of importing data from Excel spreadsheets, allowing publishers to expedite the initial inventory loading into Caikei.
+- **SheetJS:** SheetJS simplifica el proceso de importación de datos a partir de hojas de cálculo Excel, lo que permite a los editores acelerar la carga inicial del inventario en Caikei.
 
-- **React.js:** React.js is a widely adopted JavaScript library for building user interfaces. Caikei utilizes React.js to create reusable UI components and ensure a fast and interactive user experience.
+- **React.js:** React.js es una biblioteca JavaScript ampliamente adoptada para construir interfaces de usuario. Caikei utiliza React.js para crear componentes de interfaz de usuario reutilizables y garantizar una experiencia de usuario rápida e interactiva.
 
-- **Redux Toolkit:** Redux Toolkit provides a comprehensive set of tools and abstractions for managing state in React.js applications. Caikei utilizes Redux Toolkit to efficiently handle complex data flows and ensure consistent application state management.
+- **Redux Toolkit:** Redux Toolkit proporciona un conjunto completo de herramientas y abstracciones para gestionar el estado en aplicaciones React.js. Caikei utiliza Redux Toolkit para manejar eficientemente los flujos de datos complejos y garantizar una gestión coherente del estado de la aplicación.
 
-- **React PDF:** React PDF is a library used in Caikei to generate and download merchandise movement supports in PDF format, providing publishers with easy access to essential documents.
+- **React PDF:** React PDF es una biblioteca utilizada en Caikei para generar y descargar soportes de movimiento de mercancías en formato PDF, proporcionando a los editores un acceso fácil a los documentos esenciales.
 
-- **Cloudinary React:** Cloudinary React simplifies the integration of Cloudinary, a cloud-based media management platform, allowing efficient handling and storage of images and other media assets in Caikei.
+- **Cloudinary React:** Cloudinary React simplifica la integración de Cloudinary, una plataforma de gestión de medios basada en la nube, permitiendo un manejo y almacenamiento eficientes de imágenes y otros activos de medios en Caikei.
 
-- **React Hot Toast:** React Hot Toast is a notification library utilized in Caikei to display user-friendly and visually appealing notifications, enhancing the overall user experience.
+- **React Hot Toast:** React Hot Toast es una biblioteca de notificaciones utilizada en Caikei para mostrar notificaciones fáciles de usar y visualmente atractivas, mejorando la experiencia general del usuario.
 
-- **GitHub:** GitHub serves as the version control system for Caikei, enabling seamless collaboration among team members and ensuring efficient code management and deployment.
+- **GitHub:** GitHub sirve como sistema de control de versiones para Caikei, lo que permite una colaboración fluida entre los miembros del equipo y garantiza una gestión y un despliegue eficientes del código.
 
-### Problems and Thought Process
-During the development of Caikei, I encountered certain challenges. One notable obstacle was designing and implementing the database model to accurately represent the publishing inventory. I meticulously planned and refined the database structure to ensure seamless integration with other functionalities. Additionally, developing a dynamic form capable of accommodating different types of data for various merchandise movements required a flexible and scalable solution to handle diverse scenarios effectively.
+### Problemas y reflexiones
+Durante el desarrollo de Caikei, me encontré con ciertos retos. Un obstáculo notable fue diseñar e implementar el modelo de base de datos para representar con precisión el inventario editorial. Planifiqué y refiné meticulosamente la estructura de la base de datos para garantizar una integración perfecta con otras funcionalidades. Además, el desarrollo de un formulario dinámico capaz de acomodar distintos tipos de datos para varios movimientos de mercancías requería una solución flexible y escalable para manejar diversos escenarios con eficacia.
 
-### Lessons Learned
-Working on Caikei provided valuable insights. One significant lesson was the importance of balancing interface design with functional development. While aesthetics are crucial, dedicating too much time solely to design can hinder the progress of essential functionalities. Additionally, I learned the benefits of leveraging pre-existing libraries and frameworks to save time and effort compared to building functionalities from scratch.
+### Lecciones aprendidas
+Trabajar en Caikei me aportó valiosas enseñanzas. Una lección significativa fue la importancia de equilibrar el diseño de la interfaz con el desarrollo funcional. Aunque la estética es crucial, dedicar demasiado tiempo únicamente al diseño puede obstaculizar el progreso de funcionalidades esenciales. Además, aprendí las ventajas de aprovechar bibliotecas y marcos preexistentes para ahorrar tiempo y esfuerzo en comparación con la construcción de funcionalidades desde cero.
 
-### Possible Improvements
-While Caikei already offers a range of features to assist publishers in managing their inventory, there are areas for potential improvement. One enhancement could involve incorporating financial movements into the system, enabling publishers to assess the profitability and financial state of their books. Additionally, integrating analytics to identify the best-selling outlets for each book could provide valuable insights, aiding publishers in decision-making and strategic planning.
+### Posibles mejoras
+Aunque Caikei ya ofrece una serie de funciones para ayudar a los editores a gestionar su inventario, existen áreas susceptibles de mejora. Una de ellas podría ser la incorporación de movimientos financieros al sistema, lo que permitiría a los editores evaluar la rentabilidad y el estado financiero de sus libros. Además, la integración de análisis para identificar los puntos de venta más importantes para cada libro podría proporcionar una información valiosa, ayudando a los editores en la toma de decisiones y la planificación estratégica.
 
-In conclusion, Caikei is a web development project created by myself to assist independent publishers in managing their inventory effortlessly. Developed using a robust web stack, Caikei ensures reliable performance and a user-friendly experience. By leveraging its key features and considering future improvements, publishers can streamline their publishing management and focus on creating and sharing quality content.
+En conclusión, Caikei es un proyecto de desarrollo web creado por mí para ayudar a los editores independientes a gestionar su inventario sin esfuerzo. Desarrollado con una sólida arquitectura web, Caikei garantiza un rendimiento fiable y una experiencia fácil de usar. Al aprovechar sus características clave y considerar futuras mejoras, los editores pueden agilizar su gestión editorial y centrarse en crear y compartir contenidos de calidad.
