--- a/projects/hotelBooking/index.mdx
+++ b/projects/hotelBooking/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Hotel Booking"
+lang: "en"
 date: "2023-01-23"
 slug: "hotel-booking"
 link: "https://frontend-hotel-booking-ashy.vercel.app"
